--- a/works.html
+++ b/works.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Adaptive/css/style.css">
-    <link rel="stylesheet" href="../Adaptive/css/blog.css">
-    <link rel="stylesheet" href="../Adaptive/fonts/fonts/iconstyle.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/fonts/fonts/iconstyle.css">
 
     <title>Works</title>
 </head>
