--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/fonts/fonts/iconstyle.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/fonts/iconstyle.css">
 
     <title>Document</title>
 </head>
@@ -21,10 +21,10 @@
                 </div>
             <nav class="menu_body">
                 <ul class="menu_list">
-                    <li><a href="./works.html" class="menu_link">Works</a></li>
-                    <li><a href="/blog.html" class="menu_link">Blog</a></li>
-                    <li><a href="/article.html" class="menu_link">Article</a></li>
-                    <li><a href="/index.html" class="menu_link _active">Home</a></li>
+                    <li><a href="works.html" class="menu_link">Works</a></li>
+                    <li><a href="blog.html" class="menu_link">Blog</a></li>
+                    <li><a href="article.html" class="menu_link">Article</a></li>
+                    <li><a href="index.html" class="menu_link _active">Home</a></li>
 
                 </ul>
             </nav>
