--- a/article.html
+++ b/article.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Adaptive/css/style.css">
-    <link rel="stylesheet" href="../Adaptive/css/blog.css">
-    <link rel="stylesheet" href="../Adaptive/fonts/fonts/iconstyle.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="fonts/fonts/iconstyle.css">
 
     <title>Article</title>
 </head>
@@ -23,9 +23,9 @@
             <nav class="menu_body">
                 <ul class="menu_list">
                     <li><a href="./works.html" class="menu_link">Works</a></li>
-                    <li><a href="../Adaptive/blog.html" class="menu_link">Blog</a></li>
-                    <li><a href="../Adaptive/article.html" class="menu_link _active">Article</a></li>
-                    <li><a href="../Adaptive/index.html" class="menu_link">Home</a></li>
+                    <li><a href="blog.html" class="menu_link">Blog</a></li>
+                    <li><a href="article.html" class="menu_link _active">Article</a></li>
+                    <li><a href="index.html" class="menu_link">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,7 +48,7 @@
                         <h2 class="article__heading1">Heading 1</h2>
                         <h3 class="article__heading2">Heading 2</h3>
                         <div class="article__text text txt">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                        <img src="../Adaptive/img/Rectangle 5.jpg" alt="">
+                        <img src="img/Rectangle 5.jpg" alt="">
                         <img src="./img/Rectangle 6.jpg" alt="">
                     </div>
                 </div>
@@ -71,5 +71,5 @@
         
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../Adaptive/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
