--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="menu_body">
                 <ul class="menu_list">
                     <li><a href="works.html" class="menu_link">Works</a></li>
-                    <li><a href="blog.html" class="menu_link">Blog</a></li>
+                    <li><a href="./blog.html" class="menu_link">Blog</a></li>
                     <li><a href="article.html" class="menu_link">Article</a></li>
                     <li><a href="index.html" class="menu_link _active">Home</a></li>
 
