--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../Adaptive/css/blog.css">
-    <link rel="stylesheet" href="../Adaptive/fonts/fonts/iconstyle.css">
+    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="fonts/fonts/iconstyle.css">
 
     <title>Blog</title>
 </head>
@@ -23,9 +23,9 @@
             <nav class="menu_body">
                 <ul class="menu_list">
                     <li><a href="./works.html" class="menu_link">Works</a></li>
-                    <li><a href="../Adaptive/blog.html" class="menu_link _active">Blog</a></li>
-                    <li><a href="../Adaptive/article.html" class="menu_link">Article</a></li>
-                    <li><a href="../Adaptive/index.html" class="menu_link">Home</a></li>
+                    <li><a href="blog.html" class="menu_link _active">Blog</a></li>
+                    <li><a href="article.html" class="menu_link">Article</a></li>
+                    <li><a href="index.html" class="menu_link">Home</a></li>
 
                 </ul>
             </nav>
@@ -88,5 +88,5 @@
         
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../Adaptive/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
