--- a/works.html
+++ b/works.html
@@ -23,9 +23,9 @@
             <nav class="menu_body">
                 <ul class="menu_list">
                     <li><a href="./works.html" class="menu_link _active">Works</a></li>
-                    <li><a href="../Adaptive/blog.html" class="menu_link">Blog</a></li>
-                    <li><a href="../Adaptive/article.html" class="menu_link">Article</a></li>
-                    <li><a href="../Adaptive/index.html" class="menu_link">Home</a></li>
+                    <li><a href="blog.html" class="menu_link">Blog</a></li>
+                    <li><a href="article.html" class="menu_link">Article</a></li>
+                    <li><a href="index.html" class="menu_link">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
                     <div class="works">
                         <article class="works__item ">
                             <a href="" class="works__image _ibg">
-                                <img src="../Adaptive/img/Rectangle 30.jpg" alt="">
+                                <img src="img/Rectangle 30.jpg" alt="">
                             </a>
                             <div class="works__body">
                                 <a href="" class="works__title">Designing Dashboards</a>
@@ -54,7 +54,7 @@
                         </article>
                         <article class="works__item ">
                             <a href="" class="works__image _ibg">
-                                <img src="../Adaptive/img/Rectangle 32.jpg" alt="">
+                                <img src="img/Rectangle 32.jpg" alt="">
                             </a>
                             <div class="works__body">
                                 <a href="" class="works__title">Vibrant Portraits of 2020</a>
@@ -67,7 +67,7 @@
                         </article>
                         <article class="works__item ">
                             <a href="" class="works__image _ibg">
-                                <img src="../Adaptive/img/Rectangle 34.jpg" alt="">
+                                <img src="img/Rectangle 34.jpg" alt="">
                             </a>
                             <div class="works__body">
                                 <a href="" class="works__title">36 Days of Malayalam type</a>
@@ -80,7 +80,7 @@
                         </article>
                         <article class="works__item ">
                             <a href="" class="works__image _ibg">
-                                <img src="../Adaptive/img/Rectangle 40.jpg" alt="">
+                                <img src="img/Rectangle 40.jpg" alt="">
                             </a>
                             <div class="works__body">
                                 <a href="" class="works__title">Components</a>
@@ -112,5 +112,5 @@
         
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../Adaptive/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
