--- a/works.html
+++ b/works.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/blog.css">
-    <link rel="stylesheet" href="/fonts/fonts/iconstyle.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="fonts/fonts/iconstyle.css">
 
     <title>Works</title>
 </head>
@@ -22,7 +22,7 @@
                 </div>
             <nav class="menu_body">
                 <ul class="menu_list">
-                    <li><a href="./works.html" class="menu_link _active">Works</a></li>
+                    <li><a href="works.html" class="menu_link _active">Works</a></li>
                     <li><a href="blog.html" class="menu_link">Blog</a></li>
                     <li><a href="article.html" class="menu_link">Article</a></li>
                     <li><a href="index.html" class="menu_link">Home</a></li>
