--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="" class="hello__btn btn">Download Resume</a>
                 </div>
                 <div class="hello__avatar">
-                    <img src="/img/Avatar1.png" alt="">
+                    <img src="img/Avatar1.png" alt="">
                 </div>
             </div>
         </section>
@@ -78,7 +78,7 @@
                 <div class="works future-works__items">
                     <article class="works__item future-works__item ">
                         <a href="" class="works__image _ibg">
-                            <img src="/img/Rectangle 30.jpg" alt="">
+                            <img src="img/Rectangle 30.jpg" alt="">
                         </a>
                         <div class="works__body">
                             <div class="works__title">Designing Dashboards</div>
@@ -91,7 +91,7 @@
                     </article>
                     <article class="works__item future-works__item">
                         <a href="" class="works__image _ibg">
-                            <img src="/img/Rectangle 32.jpg" alt="">
+                            <img src="img/Rectangle 32.jpg" alt="">
                         </a>
                         <div class="works__body">
                             <a href="" class="works__title">Vibrant Portraits of 2020</a>
@@ -104,7 +104,7 @@
                     </article>
                     <article class="works__item future-works__item">
                         <a href="" class="works__image _ibg">
-                            <img src="/img/Rectangle 34.jpg" alt="">
+                            <img src="img/Rectangle 34.jpg" alt="">
                         </a>
                         <div class="works__body">
                             <a href="" class="works__title">36 Days of Malayalam type</a>
